added one reference

--- a/end_user_programming.bib
+++ b/end_user_programming.bib
@@ -46,11 +46,9 @@
 	Number = {7},
 	Pages = {1289 - 1303},
 	Title = {Discovering how end-user programmers and their communities use public repositories: A study on Yahoo! Pipes},
-	Url = {http://www.sciencedirect.com/science/article/pii/S095058491200211X},
 	Volume = {55},
-	Year = {2013},
-	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S095058491200211X},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.infsof.2012.10.004}}
+	Year = {2013}
+}
 
 @inproceedings{bogart2008:coscripter,
 	Author = {Bogart, C. and Burnett, M. and Cypher, A. and Scaffidi, C.},
@@ -64,3 +62,12 @@
 	Title = {End-user programming in the wild: A field study of CoScripter scripts},
 	Year = {2008},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1109/VLHCC.2008.4639056}}
+
+@inproceedings{brandt2009two,
+  title={Two studies of opportunistic programming: interleaving web foraging, learning, and writing code},
+  author={Brandt, Joel and Guo, Philip J and Lewenstein, Joel and Dontcheva, Mira and Klemmer, Scott R},
+  booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages={1589--1598},
+  year={2009},
+  organization={ACM}
+}
