--- a/background.tex
+++ b/background.tex
@@ -3,3 +3,4 @@
 
 Analysis of end-user developer repositories
 \cite{athreya2012:touchdevelop,bogart2008:coscripter,sihan2013:touchdevelop,stolee2013:yahoopipes}.
+\cite{brandt2009two}
