rolled back changes of publication properties

--- a/end_user_programming.bib
+++ b/end_user_programming.bib
@@ -46,9 +46,11 @@
 	Number = {7},
 	Pages = {1289 - 1303},
 	Title = {Discovering how end-user programmers and their communities use public repositories: A study on Yahoo! Pipes},
+	Url = {http://www.sciencedirect.com/science/article/pii/S095058491200211X},
 	Volume = {55},
-	Year = {2013}
-}
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S095058491200211X},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.infsof.2012.10.004}}
 
 @inproceedings{bogart2008:coscripter,
 	Author = {Bogart, C. and Burnett, M. and Cypher, A. and Scaffidi, C.},
