rolled back changes of touchdevelop_paper.tex file

--- a/touchdevelop_tutorials.tex
+++ b/touchdevelop_tutorials.tex
@@ -402,8 +402,7 @@ Email: {sergii,kwan}@eecs.oregonstate.edu}
 
 \begin{abstract}
 %\boldmath
-As programming becomes an increasingly valuable skillset in the modern world, there are many methods available to learn how to program. One method gaining popularity with more complex web apps is that of the interactive tutorial. We examine users’ published scripts on the TouchDevelop platform and compare interactive tutorials to traditional, copy-and-paste tutorial methods in terms of user outcomes.
-To accomplish this, we build a tool to facilitate large-scale data capture and analysis of TouchDevelop users and scripts. This tool is also capable of facilitating a much broader scope of research questions concerning the TouchDevelop population.
+As programming becomes an increasingly valuable skillset in the modern world, there are many methods available to learn how to program. One method gaining popularity with more complex web apps is that of the interactive tutorial. We examine users’ published scripts on the TouchDevelop platform and compare interactive tutorials to traditional, copy-and-paste tutorial methods in terms of user outcomes.To accomplish this, we build a tool to facilitate large-scale data capture and analysis of TouchDevelop users and scripts. This tool is also capable of facilitating a much broader scope of research questions concerning the TouchDevelop population.
 \end{abstract}
 % IEEEtran.cls defaults to using nonbold math in the Abstract.
 % This preserves the distinction between vectors and scalars. However,
@@ -549,8 +548,7 @@ The authors would like to thank...
 % http://www.michaelshell.org/tex/ieeetran/bibtex/
 \bibliographystyle{IEEEtran}
 % argument is your BibTeX string definitions and bibliography database(s)
-%\bibliography{end_user_programming,stc_model}
-\bibliography{end_user_programming}
+\bibliography{end_user_programming,stc_model}
 
 
 
