--- a/touchdevelop_tutorials.tex
+++ b/touchdevelop_tutorials.tex
@@ -1,4 +1,3 @@
-
 %% bare_conf.tex
 %% V1.3
 %% 2007/01/11
@@ -362,7 +361,7 @@
 \IEEEauthorblockA{Department of Electrical Engineering \& Computer Science\\
 Oregon State University\\
 Corvallis, Oregon, 97330
-Email: {sergii,kwan}@eecs.oregonstate.edu}
+Email: {shmarkas,kwan}@eecs.oregonstate.edu}
 }
 
 % conference papers do not typically use \thanks and this command
@@ -402,7 +401,8 @@ Email: {sergii,kwan}@eecs.oregonstate.edu}
 
 \begin{abstract}
 %\boldmath
-As programming becomes an increasingly valuable skillset in the modern world, there are many methods available to learn how to program. One method gaining popularity with more complex web apps is that of the interactive tutorial. We examine users’ published scripts on the TouchDevelop platform and compare interactive tutorials to traditional, copy-and-paste tutorial methods in terms of user outcomes.To accomplish this, we build a tool to facilitate large-scale data capture and analysis of TouchDevelop users and scripts. This tool is also capable of facilitating a much broader scope of research questions concerning the TouchDevelop population.
+As programming becomes an increasingly valuable skillset in the modern world, there are many methods available to learn how to program. One method gaining popularity with more complex web apps is that of the interactive tutorial. We examine users’ published scripts on the TouchDevelop platform and compare interactive tutorials to traditional, copy-and-paste tutorial methods in terms of user outcomes.
+To accomplish this, we build a tool to facilitate large-scale data capture and analysis of TouchDevelop users and scripts. This tool is also capable of facilitating a much broader scope of research questions concerning the TouchDevelop population.
 \end{abstract}
 % IEEEtran.cls defaults to using nonbold math in the Abstract.
 % This preserves the distinction between vectors and scalars. However,
@@ -525,7 +525,7 @@ As programming becomes an increasingly valuable skillset in the modern world, th
 \section*{Acknowledgment}
 
 
-The authors would like to thank...
+The authors would like to thank Microsoft Research ...
 
 
 
